feat: changed  passing width for  input

--- a/frontend/src/app/libs/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/libs/user-profile-page/user-profile-page.component.html
@@ -51,28 +51,28 @@
 				</div>
 				<app-input class="app-user-config__input"
 						   formControlName="firstName"
-						   size="full"
+						   widthInput="432px"
 						   [theme]="darkTheme"
 						   [type]="'text'"
 						   [label]="'USER-PROFILE.FIRST_NAME' | translate">
 				</app-input>
 				<app-input class="app-user-config__input"
 						   formControlName="secondName"
-						   size="full"
+						   widthInput="432px"
 						   [theme]="darkTheme"
 						   [type]="'text'"
 						   [label]="'USER-PROFILE.LAST_NAME' | translate">
 				</app-input>
 				<app-input class="app-user-config__input"
 						   formControlName="email"
-						   size="full"
+						   widthInput="432px"
 						   [theme]="darkTheme"
 						   [type]="'email'"
 						   [label]="'USER-PROFILE.EMAIL' | translate">
 				</app-input>
 				<app-input class="app-user-config__input"
 						   formControlName="mobilePhone"
-						   size="full"
+						   widthInput="432px"
 						   [theme]="darkTheme"
 						   [type]="'tel'"
 						   [label]="'USER-PROFILE.PHONE' | translate">
@@ -95,14 +95,14 @@
 				<div class="app-user-config__form">
 					<app-input class="app-user-config__input"
 							   formControlName="oldPassword"
-							   size="full"
+							   widthInput="432px"
 							   [theme]="darkTheme"
 							   [type]="'password'"
 							   [label]="'USER-PROFILE.OLD_PASSWORD' | translate">
 					</app-input>
 					<app-input class="app-user-config__input"
 							   formControlName="newPassword"
-							   size="full"
+							   widthInput="432px"
 							   [theme]="darkTheme"
 							   [type]="'password'"
 							   [label]="'USER-PROFILE.NEW_PASSWORD' | translate">
@@ -131,7 +131,7 @@
 							 alt="skype">
 						<app-input class="app-user-config__input-links"
 								   formControlName="skype"
-								   size="medium"
+								   widthInput="388px"
 								   [theme]="darkTheme"
 								   [type]="'text'"
 								   [label]="'Skype'">
@@ -143,7 +143,7 @@
 							 alt="telegram">
 						<app-input class="app-user-config__input-links"
 								   formControlName="telegram"
-								   size="medium"
+								   widthInput="388px"
 								   [theme]="darkTheme"
 								   [type]="'text'"
 								   [label]="'Telegram'">
@@ -155,7 +155,7 @@
 							 alt="vk">
 						<app-input class="app-user-config__input-links"
 								   formControlName="vk"
-								   size="medium"
+								   widthInput="388px"
 								   [theme]="darkTheme"
 								   [type]="'text'"
 								   [label]="'VK'">
@@ -167,7 +167,7 @@
 							 alt="facebook">
 						<app-input class="app-user-config__input-links"
 								   formControlName="facebook"
-								   size="medium"
+								   widthInput="388px"
 								   [theme]="darkTheme"
 								   [type]="'text'"
 								   [label]="'Facebook'">
@@ -179,7 +179,7 @@
 							 alt="linkedin">
 						<app-input class="app-user-config__input-links"
 								   formControlName="linkedin"
-								   size="medium"
+								   widthInput="388px"
 								   [theme]="darkTheme"
 								   [type]="'text'"
 								   [label]="'LinkedIn'">
@@ -192,7 +192,7 @@
 							 alt="github">
 						<app-input class="app-user-config__input-links"
 								   formControlName="github"
-								   size="medium"
+								   widthInput="388px"
 								   [theme]="darkTheme"
 								   [type]="'text'"
 								   [label]="'GitHub'">
@@ -207,3 +207,4 @@
 			</form>
 		</div>
 	</div>
+	
