feat: removed additional ` quotes

--- a/frontend/src/app/libs/user-profile-page/user-profile-page.component.html
+++ b/frontend/src/app/libs/user-profile-page/user-profile-page.component.html
@@ -53,28 +53,28 @@
 						   formControlName="firstName"
 						   widthInput="432px"
 						   [theme]="darkTheme"
-						   [type]="'text'"
+						   type="text"
 						   [label]="'USER-PROFILE.FIRST_NAME' | translate">
 				</app-input>
 				<app-input class="app-user-config__input"
 						   formControlName="secondName"
 						   widthInput="432px"
 						   [theme]="darkTheme"
-						   [type]="'text'"
+						   type="text"
 						   [label]="'USER-PROFILE.LAST_NAME' | translate">
 				</app-input>
 				<app-input class="app-user-config__input"
 						   formControlName="email"
 						   widthInput="432px"
 						   [theme]="darkTheme"
-						   [type]="'email'"
+						   type="text"
 						   [label]="'USER-PROFILE.EMAIL' | translate">
 				</app-input>
 				<app-input class="app-user-config__input"
 						   formControlName="mobilePhone"
 						   widthInput="432px"
 						   [theme]="darkTheme"
-						   [type]="'tel'"
+						   type="tel"
 						   [label]="'USER-PROFILE.PHONE' | translate">
 				</app-input>
 				<app-button class="app-user-config__btn"
@@ -97,14 +97,14 @@
 							   formControlName="oldPassword"
 							   widthInput="432px"
 							   [theme]="darkTheme"
-							   [type]="'password'"
+							   type="password"
 							   [label]="'USER-PROFILE.OLD_PASSWORD' | translate">
 					</app-input>
 					<app-input class="app-user-config__input"
 							   formControlName="newPassword"
 							   widthInput="432px"
 							   [theme]="darkTheme"
-							   [type]="'password'"
+							   type="password"
 							   [label]="'USER-PROFILE.NEW_PASSWORD' | translate">
 					</app-input>
 
@@ -133,8 +133,8 @@
 								   formControlName="skype"
 								   widthInput="388px"
 								   [theme]="darkTheme"
-								   [type]="'text'"
-								   [label]="'Skype'">
+								   type="text"
+								   label="Skype">
 						</app-input>
 					</div>
 					<div class="app-user-config__box-link">
@@ -145,8 +145,8 @@
 								   formControlName="telegram"
 								   widthInput="388px"
 								   [theme]="darkTheme"
-								   [type]="'text'"
-								   [label]="'Telegram'">
+								   type="text"
+								   label="Telegram">
 						</app-input>
 					</div>
 					<div class="app-user-config__box-link">
@@ -157,8 +157,8 @@
 								   formControlName="vk"
 								   widthInput="388px"
 								   [theme]="darkTheme"
-								   [type]="'text'"
-								   [label]="'VK'">
+								   type="text"
+								   label="VK">
 						</app-input>
 					</div>
 					<div class="app-user-config__box-link">
@@ -169,8 +169,8 @@
 								   formControlName="facebook"
 								   widthInput="388px"
 								   [theme]="darkTheme"
-								   [type]="'text'"
-								   [label]="'Facebook'">
+								   type="text"
+								   label="Facebook">
 						</app-input>
 					</div>
 					<div class="app-user-config__box-link">
@@ -181,8 +181,8 @@
 								   formControlName="linkedin"
 								   widthInput="388px"
 								   [theme]="darkTheme"
-								   [type]="'text'"
-								   [label]="'LinkedIn'">
+								   type="text"
+								   label="LinkedIn">
 						</app-input>
 					</div>
 
@@ -194,8 +194,8 @@
 								   formControlName="github"
 								   widthInput="388px"
 								   [theme]="darkTheme"
-								   [type]="'text'"
-								   [label]="'GitHub'">
+								   type="text"
+								   label="GitHub">
 						</app-input>
 					</div>
 					<app-button class="app-user-config__btn"
