--- a/frontend/src/app/libs/container/components/header/header.component.html
+++ b/frontend/src/app/libs/container/components/header/header.component.html
@@ -1,39 +1,95 @@
 <header class="header">
-	<div class="header__logo-container" routerLink="/landing">
-		<img class="header__logo" src="assets/images/logo.svg">
+	<div class="header__logo-container"
+		 routerLink="/landing">
+		<img class="header__logo"
+			 src="assets/images/logo.svg">
 	</div>
-	<div class="header__admin-buttons" *ngIf="userService.user?.isAdmin">
-		<app-button
-				class="header__admin-button"
-				[class.header__admin-button--active]="adminLinksActivation.get(eventsLink)"
-				[theme]="darkTheme"
-				[disableRipple]="true"
-				[disableHover]="true"
-				(click)="onEventsClick()"
-				routerLink="/landing">
+	<div class="header__admin-buttons"
+		 *ngIf="userService.user?.isAdmin">
+		<app-button class="header__admin-button"
+					[class.header__admin-button--active]="adminLinksActivation.get(eventsLink)"
+					[theme]="darkTheme"
+					[disableRipple]="true"
+					[disableHover]="true"
+					(click)="onEventsClick()"
+					routerLink="/landing">
 			{{"BUTTON.EVENTS" | translate}}
 		</app-button>
-		<app-button
-				class="header__admin-button"
-				[class.header__admin-button--active]="adminLinksActivation.get(administrationLink)"
-				[theme]="darkTheme"
-				[disableRipple]="true"
-				[disableHover]="true"
-				(click)="onAdministrationClick()"
-				routerLink="/adminrolemanagement">
+		<app-button class="header__admin-button"
+					[class.header__admin-button--active]="adminLinksActivation.get(administrationLink)"
+					[theme]="darkTheme"
+					[disableRipple]="true"
+					[disableHover]="true"
+					(click)="onAdministrationClick()"
+					routerLink="/adminrolemanagement">
 			{{"BUTTON.ADMINISTRATION" | translate}}
 		</app-button>
 	</div>
 	<div class="header__common-buttons">
-		<app-localization class="header__localization"></app-localization>
-		<app-button class="header__button" *ngIf="userService.isEventManagerUser" [theme]="darkTheme" [type]="flatButtonType">
+		<app-button class="header__button header__button--create-event"
+					*ngIf="userService.isEventManagerUser"
+					[theme]="darkTheme"
+					[type]="flatButtonType"
+					(click)="templatepopoverdark.open()">
 			{{"BUTTON.CREATE_EVENT" | translate}}
 		</app-button>
+		<!-- 		<div mat-dialog-content>
+			<p>Create Event</p>
+			<app-input type="text"
+					   [theme]="darkTheme"
+					   [label]="'LABEL.EVENT_NAME' | translate"
+					   [placeholder]="'PLACEHOLDER.EVENT_NAME' | translate">
+			</app-input>
+			<app-button class="header__button header__button--cancel"
+						[theme]="darkTheme"
+						[type]="flatButtonType">
+				{{"BUTTON.CANCEL" | translate}}
+			</app-button>
+			<app-button class="header__button header__button--create"
+						[theme]="darkTheme"
+						[type]="flatButtonType">
+				{{"BUTTON.CREATE" | translate}}
+			</app-button>
+		</div> -->
+		<app-popover [theme]="lightTheme"
+					 #templatepopoverdark>
+			<div class="popover-title">
+				{{"BUTTON.CREATE_EVENT" | translate}}
+			</div>
+			<div class="popover-content">
+				<app-input type="text"
+						   [theme]="lightTheme"
+						   [label]="'LABEL.EVENT_NAME' | translate"
+						   [placeholder]="'PLACEHOLDER.EVENT_NAME' | translate">
+				</app-input>
+			</div>
+			<div class="popover-actions">
+				<app-button class="popover-actions__btn"
+							type="outlined"
+							[theme]="lightTheme"
+							(click)="templatepopoverdark.close()">
+							{{"BUTTON.CANCEL" | translate}}
+				</app-button>
+				<app-button class="popover-actions__btn"
+							type="flat"
+							[theme]="lightTheme"
+							(click)="templatepopoverdark.close()">
+							{{"BUTTON.CREATE" | translate}}
+				</app-button>
+			</div>
+		</app-popover>
+		<app-localization class="header__localization"></app-localization>
 		<ng-container *ngIf="userService.isUnauthorizedUser">
-			<app-button class="header__button" [theme]="darkTheme" [type]="outlinedButtonType" routerLink="signin">
+			<app-button class="header__button"
+						[theme]="darkTheme"
+						[type]="outlinedButtonType"
+						routerLink="signin">
 				{{"BUTTON.SIGN_IN" | translate}}
 			</app-button>
-			<app-button class="header__button" [theme]="darkTheme" [type]="flatButtonType" routerLink="signup">
+			<app-button class="header__button"
+						[theme]="darkTheme"
+						[type]="flatButtonType"
+						routerLink="signup">
 				{{"BUTTON.SIGN_UP" | translate}}
 			</app-button>
 		</ng-container>
