feat: popup with style

--- a/frontend/src/app/libs/common-components/components/button/button.component.scss
+++ b/frontend/src/app/libs/common-components/components/button/button.component.scss
@@ -93,4 +93,9 @@
 		background-color: $color-black-95;
 		border-color: $color-black-95;
 	}
+
+	&--color-mint {
+		background-color: $color-mint;
+		border-color: $color-mint;
+	}
 }
