--- a/frontend/src/app/libs/event-creation/event-creation.component.html
+++ b/frontend/src/app/libs/event-creation/event-creation.component.html
@@ -1,5 +1,3 @@
 <div class="event-creation">
-	<div class="event-creation__breadcrumb">
-		<app-breadcrumb></app-breadcrumb>
-	</div>
+		<app-breadcrumb-tab></app-breadcrumb-tab>
 </div>
