--- a/frontend/src/app/libs/event-creation/event-creation.component.scss
+++ b/frontend/src/app/libs/event-creation/event-creation.component.scss
@@ -1,9 +1,9 @@
 @import "variables";
 
-.event-creation {
+/* .event-creation {
 	&__breadcrumb {
 		position: sticky;
 		top: $layout-column-width;
 		z-index: 2;
 	}
-}
+} */
