feat: added custom component select

--- a/frontend/src/app/libs/breadcrumb-tab/breadcrumb-tab.component.html
+++ b/frontend/src/app/libs/breadcrumb-tab/breadcrumb-tab.component.html
@@ -5,7 +5,7 @@
 	<div class="app-breadcrumb-tab__tabs" theme="lightTheme">
 		<app-tabs>
 			<app-tabs-panel [label]="'GENERAL'">
-
+				<!-- <app-general-info></app-general-info> -->
 			</app-tabs-panel>
 			<app-tabs-panel [label]="'TASKS(8)'">
 
