--- a/frontend/src/app/libs/common-components/components/select/select.component.scss
+++ b/frontend/src/app/libs/common-components/components/select/select.component.scss
@@ -1,7 +1,19 @@
 @import "variables";
 
+.mat-form-field {
+	width: 120px;
+}
 .app-select {
+	position: relative;
+	display: inline-block;
+
 	&__field {
-		width: $main-grid-unit * 15 ;
+		width: $main-grid-unit * 15;
+	}
+	&__arrow--gray.material-icons {
+		color: #909090;
+	}
+	&__arrow--blue.material-icons {
+		color: $color-primary;
 	}
 }
