--- a/frontend/src/app/libs/event-creation/general-info-page/general-info-page.component.html
+++ b/frontend/src/app/libs/event-creation/general-info-page/general-info-page.component.html
@@ -9,9 +9,9 @@
 			   label="Event title"></app-input>
 	<div>
 		<app-datepicker label="Start date"></app-datepicker>
-		<app-select label="Start date"></app-select>
+		<app-select label="Start time"></app-select>
 		<app-datepicker label="End date"></app-datepicker>
-		<app-select label="End date"></app-select>
+		<app-select label="End time"></app-select>
 		<app-slide-toggle value="false"
 						  theme=lightTheme
 						  title="Continuous event">
