--- a/frontend/src/app-theme.scss
+++ b/frontend/src/app-theme.scss
@@ -43,4 +43,5 @@ $app-typography: mat-typography-config(
 @import "./app/libs/common-components/components/tag-list/tag-list.theme.scss";
 @import "./app/libs/container/components/header/header.theme.scss";
 @import "./app/libs/common-components/components/checkbox/checkbox.theme.scss";
-@import "./app/libs/common-components/components/progress-bar/progress-bar.theme.scss"
+@import "./app/libs/common-components/components/progress-bar/progress-bar.theme.scss";
+@import "./app//libs//common-components/components/select/select.theme.scss";
