--- a/frontend/src/app/libs/breadcrumb/breadcrumb.component.html
+++ b/frontend/src/app/libs/breadcrumb/breadcrumb.component.html
@@ -9,4 +9,5 @@
 			 src="assets/images/icons/icon-chevron-right.svg"
 			 alt="icons">
 	</ng-container>
+<!-- 	<ng-content></ng-content> -->
 </div>
