--- a/frontend/src/app/libs/event-creation/event-creation.component.html
+++ b/frontend/src/app/libs/event-creation/event-creation.component.html
@@ -1,4 +1,9 @@
 <div class="event-creation">
-		<app-breadcrumb-tab></app-breadcrumb-tab>
-		<app-general-info></app-general-info>
+	<!-- 	<app-breadcrumb>
+			<app-tab-navigation-button>General</app-tab-navigation-button>
+		</app-breadcrumb>
+		<div class="event-creation__content">
+			<app-general-page *ngIf="..."></app-general-page>
+		</div> -->
+	 <app-general-info></app-general-info>
 </div>
